# ambertrace-rlvr

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/agents/: analyst.md  implementer.md  reviewer.md
.claude/skills/critical-review/: SKILL.md
.claude/skills/dev-workflow/: SKILL.md
.claude/skills/push-and-pr/: SKILL.md
.claude/skills/tests-create/: SKILL.md
.claude/skills/tests-run/: SKILL.md
.claude/skills/trace-feature/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: verification_overhead.py
configs/: acmg.yaml  grant_eligibility.yaml  loan_example.yaml
data/: acmg_eval.jsonl  acmg_train.jsonl  acmg_variants.csv  grant_eligibility_dataset.csv  grant_eligibility_eval.jsonl  grant_eligibility_train.jsonl
docs/: AmberTrace-RLVR — Library Specification.md  RESULTS.md  USER_GUIDE.md  issue-rejected-facts-shape.md  rfc-dense-reward-query-contract.md
examples/: acmg_variant_grpo.py  author_acmg_platform.py  author_demo_platform.py  gen_acmg_dataset.py  gen_acmg_prompts.py  gen_demo_dataset.py  gen_training_prompts.py  generate_and_verify.py  grant_eligibility_grpo.py  plot_run_report.py  score_completions.py  verl_reward_worker.py
src/ambertrace_rlvr/: __init__.py  config.py  domain.py  evaluation.py  parsers.py  prompts.py  reporting.py  reports.py  rewards.py  testing.py  verifier.py
src/ambertrace_rlvr/integrations/: __init__.py  openrlhf.py  trl.py  verl.py
tests/: conftest.py  test_config.py  test_evaluation.py  test_integrations_trl.py  test_integrations_verl.py  test_live_training.py  test_parsers.py  test_reporting.py  test_reports.py  test_rewards.py  test_verifier.py  test_verifier_concurrency.py
tests/fixtures/: loan_query_result.json
