[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ambertrace-rlvr"
version = "0.0.1"
description = "RLVR training with AmberTrace verified platforms as the reward source"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Ambertrace Labs Ltd" }]
dependencies = [
    "ambertraceai>=1.0.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
trl = ["trl>=0.9", "transformers>=4.40", "torch>=2.1"]
wandb = ["wandb>=0.16"]
dev = ["pytest>=8.0", "pyright>=1.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/ambertrace_rlvr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
