[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ambertrace-rlvr"
version = "0.0.1"
description = "RLVR training with AmberTrace verified platforms as the reward source"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ambertrace Labs Ltd" }]
keywords = ["rlvr", "reinforcement-learning", "llm", "verifiable-rewards", "neurosymbolic", "grpo", "ambertrace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ambertraceai>=1.0.5",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ambertrace-labs/ambertrace-rlvr"
Repository = "https://github.com/ambertrace-labs/ambertrace-rlvr"
Issues = "https://github.com/ambertrace-labs/ambertrace-rlvr/issues"
"AmberTrace" = "https://ambertrace.ai"

[project.optional-dependencies]
trl = ["trl>=0.9", "transformers>=4.40", "torch>=2.1"]
wandb = ["wandb>=0.16"]
dev = ["pytest>=8.0", "pyright>=1.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/ambertrace_rlvr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
